--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
